Bug 1456269 - Construct OscillatorNode with PeriodicWave and type custom works. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D23828